--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^24.4.0",
     "@types/react": "19.1.12",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
